pkg/lang/testdata/ub/inputs/valid/library-config-value.ub
inputs: {
  aws-config: { type: library-config('github.com/acme/aws') }
}
