pkg/lang/testdata/ub/inputs/invalid/bad-meta-key.ub
inputs: {
  region: {
    type:    string
    @library: 'aws'
  }
}
